--- a/JavaScritp/modulo F/projeto_analisador_numerico/style.css
+++ b/JavaScritp/modulo F/projeto_analisador_numerico/style.css
@@ -1,20 +1,22 @@
 
 
 body{
-background-color: rgb(20, 10, 150);
+background-color: rgb(163, 16, 231);
 color: white;
 font-family: cursive;
 text-align: center;
 }
 
 section{
-background-color: white;
+background-color: rgb(233, 144, 43);
 border-radius: 10px;
-padding: 15px;
+padding: 30px;
 color: rgb(8, 2, 176);
-width: 500px;
+width: 80%;
+height: 100%;
 margin: auto;
-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.447);
+box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.447);
+font-size: 20px;
 
 }
 
@@ -22,13 +24,32 @@ box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.447);
 footer{
 text-align: center;
 font-style: italic;
+font-size: 25px;
 }
 
-img{
-    width: 300px;
-    padding: auto;
-}
+
 
 select#flista{
-    width: 500px;
+    width: 50%;
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+input{
+    width: 25%;
+    height: 60px;
+    margin-right: 10px;
+    font-size: 30px;
+    margin-top: 15px;
+}
+
+input#fbotao{
+    width: 15%;
+    height: 60px;
+    background-color: rgb(110, 14, 14);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 30px;
 }
